Changes
=======

In next release ...

Bugfixes:

- Add support for ``__slots__``.

0.3 (2012-02-02)
----------------

- Add support for Python 3.

- Use C-optimized pickle module when available.

0.2 (2009-10-22)
----------------

- Subclasses may now override existing methods (e.g. ``__setattr__``)
  and use ``super`` to get at the overriden method.

- Transactions now see data in isolation.

- When a persistent object is first created, its state is immediately
  local. This allows an ``__init__`` method to initialize the object.

- Added method to create a snapshot in time of an existing database.

- Added ``PersistentDict`` class.

- The ``Persistent`` class is now persisted as changesets rather than
  complete object state.

- Set up tests to run using the nose testrunner (or using setuptools).

0.1 (2009-09-26)
----------------

- Initial public release.